Fixing input error overlapping with other elements

--- a/app/assets/stylesheets/new_common/form-content.css.scss
+++ b/app/assets/stylesheets/new_common/form-content.css.scss
@@ -116,7 +116,7 @@
   outline: none;
   border: 1px solid #CCC;
   border-radius: 4px;
-  z-index: 1;
+  z-index: 2;
 
   &:focus { border-color: #999 }
 }
@@ -175,7 +175,7 @@
   right: 0;
   height: 38px;
   padding: 0 12px;
-  z-index: 0;
+  z-index: 1;
   border: 1px solid #CCC;
   line-height: 38px;
   background: #FFF4F4;
